Fix warning/crash for MSVC ARM64 mode

Initialize the variables outside the loop to avoid repeating it on every
iteration.

Pick-to: 6.8
Fixes: QTBUG-128667
Change-Id: I8e2ed0e40bdc4d687060df72f1d45e940e56df98
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>